# smart-cloud-door

./: .gitignore  README.md
application/: CMakeLists.txt  main.cpp
application/app/: app.cpp  app.h
application/database/: database.cpp  database.h
application/hw/: err.h  keypad.cpp  keypad.h  lcd.cpp  lcd.h  led.cpp  led.h
device-tree/: bcm2711-rpi-4-b.dtb  door-bcm2711-rpi-4-b.dtsi
kernel-drivers/LCD_platform_driver/: gpio.c  gpio.h  lcd.c  lcd.h  lcd_platform_driver.c  lcd_platform_driver_data.h
kernel-drivers/gpio_sysfs/: gpio-sysfs.c
kernel-drivers/keypad_4x3_platform_driver/: keypad.c  keypad_platform_driver.c
yocto-image/meta-scd/: README
yocto-image/meta-scd/conf/: layer.conf
yocto-image/meta-scd/conf/distro/: scdOS.conf
yocto-image/meta-scd/recipes-apps/scd-app/: scd-app.bb
yocto-image/meta-scd/recipes-apps/scd-app/files/: CMakeLists.txt  main.cpp
yocto-image/meta-scd/recipes-core/images/: scd-image.bb
yocto-image/meta-scd/recipes-core/startup/: scd-startup.bb
yocto-image/meta-scd/recipes-core/startup/files/: scd-startup.service
yocto-image/meta-scd/recipes-lkm/gpio-module/: gpio-module.bb
yocto-image/meta-scd/recipes-lkm/gpio-module/files/: Makefile  gpio-sysfs.c
yocto-image/meta-scd/recipes-lkm/keypad-module/: keypad-module.bb
yocto-image/meta-scd/recipes-lkm/keypad-module/files/: CMakeLists.txt  Makefile  keypad.h  (+1 more)
yocto-image/meta-scd/recipes-lkm/lcd-module/: lcd-module.bb
yocto-image/meta-scd/recipes-support/postgresql-init/: postgresql-init.bb
yocto-image/meta-scd/recipes-support/soci/: soci_4.0.3.bbappend
(+10 files in other folders)
